--- a/CapstoneTwoDataWrangling.ipynb
+++ b/CapstoneTwoDataWrangling.ipynb
@@ -33,61 +33,113 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.info of         Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
-       "0        1          60       RL         65.0     8450   Pave   NaN      Reg   \n",
-       "1        2          20       RL         80.0     9600   Pave   NaN      Reg   \n",
-       "2        3          60       RL         68.0    11250   Pave   NaN      IR1   \n",
-       "3        4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
-       "4        5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
-       "...    ...         ...      ...          ...      ...    ...   ...      ...   \n",
-       "1455  1456          60       RL         62.0     7917   Pave   NaN      Reg   \n",
-       "1456  1457          20       RL         85.0    13175   Pave   NaN      Reg   \n",
-       "1457  1458          70       RL         66.0     9042   Pave   NaN      Reg   \n",
-       "1458  1459          20       RL         68.0     9717   Pave   NaN      Reg   \n",
-       "1459  1460          20       RL         75.0     9937   Pave   NaN      Reg   \n",
-       "\n",
-       "     LandContour Utilities  ... PoolArea PoolQC  Fence MiscFeature MiscVal  \\\n",
-       "0            Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "1            Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "2            Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "3            Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "4            Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "...          ...       ...  ...      ...    ...    ...         ...     ...   \n",
-       "1455         Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "1456         Lvl    AllPub  ...        0    NaN  MnPrv         NaN       0   \n",
-       "1457         Lvl    AllPub  ...        0    NaN  GdPrv        Shed    2500   \n",
-       "1458         Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "1459         Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
-       "\n",
-       "     MoSold YrSold  SaleType  SaleCondition  SalePrice  \n",
-       "0         2   2008        WD         Normal     208500  \n",
-       "1         5   2007        WD         Normal     181500  \n",
-       "2         9   2008        WD         Normal     223500  \n",
-       "3         2   2006        WD        Abnorml     140000  \n",
-       "4        12   2008        WD         Normal     250000  \n",
-       "...     ...    ...       ...            ...        ...  \n",
-       "1455      8   2007        WD         Normal     175000  \n",
-       "1456      2   2010        WD         Normal     210000  \n",
-       "1457      5   2010        WD         Normal     266500  \n",
-       "1458      4   2010        WD         Normal     142125  \n",
-       "1459      6   2008        WD         Normal     147500  \n",
-       "\n",
-       "[1460 rows x 81 columns]>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 81 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Id             1460 non-null   int64  \n",
+      " 1   MSSubClass     1460 non-null   int64  \n",
+      " 2   MSZoning       1460 non-null   object \n",
+      " 3   LotFrontage    1201 non-null   float64\n",
+      " 4   LotArea        1460 non-null   int64  \n",
+      " 5   Street         1460 non-null   object \n",
+      " 6   Alley          91 non-null     object \n",
+      " 7   LotShape       1460 non-null   object \n",
+      " 8   LandContour    1460 non-null   object \n",
+      " 9   Utilities      1460 non-null   object \n",
+      " 10  LotConfig      1460 non-null   object \n",
+      " 11  LandSlope      1460 non-null   object \n",
+      " 12  Neighborhood   1460 non-null   object \n",
+      " 13  Condition1     1460 non-null   object \n",
+      " 14  Condition2     1460 non-null   object \n",
+      " 15  BldgType       1460 non-null   object \n",
+      " 16  HouseStyle     1460 non-null   object \n",
+      " 17  OverallQual    1460 non-null   int64  \n",
+      " 18  OverallCond    1460 non-null   int64  \n",
+      " 19  YearBuilt      1460 non-null   int64  \n",
+      " 20  YearRemodAdd   1460 non-null   int64  \n",
+      " 21  RoofStyle      1460 non-null   object \n",
+      " 22  RoofMatl       1460 non-null   object \n",
+      " 23  Exterior1st    1460 non-null   object \n",
+      " 24  Exterior2nd    1460 non-null   object \n",
+      " 25  MasVnrType     1452 non-null   object \n",
+      " 26  MasVnrArea     1452 non-null   float64\n",
+      " 27  ExterQual      1460 non-null   object \n",
+      " 28  ExterCond      1460 non-null   object \n",
+      " 29  Foundation     1460 non-null   object \n",
+      " 30  BsmtQual       1423 non-null   object \n",
+      " 31  BsmtCond       1423 non-null   object \n",
+      " 32  BsmtExposure   1422 non-null   object \n",
+      " 33  BsmtFinType1   1423 non-null   object \n",
+      " 34  BsmtFinSF1     1460 non-null   int64  \n",
+      " 35  BsmtFinType2   1422 non-null   object \n",
+      " 36  BsmtFinSF2     1460 non-null   int64  \n",
+      " 37  BsmtUnfSF      1460 non-null   int64  \n",
+      " 38  TotalBsmtSF    1460 non-null   int64  \n",
+      " 39  Heating        1460 non-null   object \n",
+      " 40  HeatingQC      1460 non-null   object \n",
+      " 41  CentralAir     1460 non-null   object \n",
+      " 42  Electrical     1459 non-null   object \n",
+      " 43  1stFlrSF       1460 non-null   int64  \n",
+      " 44  2ndFlrSF       1460 non-null   int64  \n",
+      " 45  LowQualFinSF   1460 non-null   int64  \n",
+      " 46  GrLivArea      1460 non-null   int64  \n",
+      " 47  BsmtFullBath   1460 non-null   int64  \n",
+      " 48  BsmtHalfBath   1460 non-null   int64  \n",
+      " 49  FullBath       1460 non-null   int64  \n",
+      " 50  HalfBath       1460 non-null   int64  \n",
+      " 51  BedroomAbvGr   1460 non-null   int64  \n",
+      " 52  KitchenAbvGr   1460 non-null   int64  \n",
+      " 53  KitchenQual    1460 non-null   object \n",
+      " 54  TotRmsAbvGrd   1460 non-null   int64  \n",
+      " 55  Functional     1460 non-null   object \n",
+      " 56  Fireplaces     1460 non-null   int64  \n",
+      " 57  FireplaceQu    770 non-null    object \n",
+      " 58  GarageType     1379 non-null   object \n",
+      " 59  GarageYrBlt    1379 non-null   float64\n",
+      " 60  GarageFinish   1379 non-null   object \n",
+      " 61  GarageCars     1460 non-null   int64  \n",
+      " 62  GarageArea     1460 non-null   int64  \n",
+      " 63  GarageQual     1379 non-null   object \n",
+      " 64  GarageCond     1379 non-null   object \n",
+      " 65  PavedDrive     1460 non-null   object \n",
+      " 66  WoodDeckSF     1460 non-null   int64  \n",
+      " 67  OpenPorchSF    1460 non-null   int64  \n",
+      " 68  EnclosedPorch  1460 non-null   int64  \n",
+      " 69  3SsnPorch      1460 non-null   int64  \n",
+      " 70  ScreenPorch    1460 non-null   int64  \n",
+      " 71  PoolArea       1460 non-null   int64  \n",
+      " 72  PoolQC         7 non-null      object \n",
+      " 73  Fence          281 non-null    object \n",
+      " 74  MiscFeature    54 non-null     object \n",
+      " 75  MiscVal        1460 non-null   int64  \n",
+      " 76  MoSold         1460 non-null   int64  \n",
+      " 77  YrSold         1460 non-null   int64  \n",
+      " 78  SaleType       1460 non-null   object \n",
+      " 79  SaleCondition  1460 non-null   object \n",
+      " 80  SalePrice      1460 non-null   int64  \n",
+      "dtypes: float64(3), int64(35), object(43)\n",
+      "memory usage: 924.0+ KB\n"
+     ]
     }
    ],
    "source": [
-    "train_data.info"
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only 7 houses have pools, and 91 were adjacent to an alley. Only 54 MiscFeatures, 281 with fences., 770 fireplaces."
    ]
   },
   {
@@ -1132,17 +1184,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       4938\n",
-      "1       5214\n",
-      "2       4725\n",
-      "3       5668\n",
-      "4       4634\n",
+      "0       4939\n",
+      "1       5215\n",
+      "2       4726\n",
+      "3       5669\n",
+      "4       4635\n",
       "        ... \n",
-      "1455    5122\n",
-      "1456    4207\n",
-      "1457    4118\n",
-      "1458    4148\n",
-      "1459    4817\n",
+      "1455    5123\n",
+      "1456    4208\n",
+      "1457    4119\n",
+      "1458    4149\n",
+      "1459    4818\n",
       "Name: Age_of_sale, Length: 1460, dtype: int64\n"
      ]
     }
@@ -1479,17 +1531,17 @@
        "1459         Lvl    AllPub    Inside  ...      0           0       0       WD   \n",
        "\n",
        "     SaleCondition SalePrice  Age_of_sale  House_Age Remod_Age Garage_Age  \n",
-       "0           Normal    208500         4938         18        18       18.0  \n",
-       "1           Normal    181500         5214         45        45       45.0  \n",
-       "2           Normal    223500         4725         20        19       20.0  \n",
-       "3          Abnorml    140000         5668        106        51       23.0  \n",
-       "4           Normal    250000         4634         21        21       21.0  \n",
+       "0           Normal    208500         4939         18        18       18.0  \n",
+       "1           Normal    181500         5215         45        45       45.0  \n",
+       "2           Normal    223500         4726         20        19       20.0  \n",
+       "3          Abnorml    140000         5669        106        51       23.0  \n",
+       "4           Normal    250000         4635         21        21       21.0  \n",
        "...            ...       ...          ...        ...       ...        ...  \n",
-       "1455        Normal    175000         5122         22        21       22.0  \n",
-       "1456        Normal    210000         4207         43        33       43.0  \n",
-       "1457        Normal    266500         4118         80        15       80.0  \n",
-       "1458        Normal    142125         4148         71        25       71.0  \n",
-       "1459        Normal    147500         4817         56        56       56.0  \n",
+       "1455        Normal    175000         5123         22        21       22.0  \n",
+       "1456        Normal    210000         4208         43        33       43.0  \n",
+       "1457        Normal    266500         4119         80        15       80.0  \n",
+       "1458        Normal    142125         4149         71        25       71.0  \n",
+       "1459        Normal    147500         4818         56        56       56.0  \n",
        "\n",
        "[1460 rows x 79 columns]>"
       ]
@@ -1535,8 +1587,8 @@
        "Timber      38\n",
        "IDOTRR      37\n",
        "ClearCr     28\n",
-       "StoneBr     25\n",
        "SWISU       25\n",
+       "StoneBr     25\n",
        "Blmngtn     17\n",
        "MeadowV     17\n",
        "BrDale      16\n",
@@ -2029,13 +2081,13 @@
        "    <tr>\n",
        "      <th>Age_of_sale</th>\n",
        "      <td>1460.0</td>\n",
-       "      <td>4874.894521</td>\n",
+       "      <td>4875.894521</td>\n",
        "      <td>480.169167</td>\n",
-       "      <td>4057.0</td>\n",
-       "      <td>4452.00</td>\n",
-       "      <td>4848.0</td>\n",
-       "      <td>5244.00</td>\n",
-       "      <td>5699.0</td>\n",
+       "      <td>4058.0</td>\n",
+       "      <td>4453.00</td>\n",
+       "      <td>4849.0</td>\n",
+       "      <td>5245.00</td>\n",
+       "      <td>5700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>House_Age</th>\n",
@@ -2108,7 +2160,7 @@
        "PoolArea       1460.0       2.758904     40.177307      0.0       0.00   \n",
        "MiscVal        1460.0      43.489041    496.123024      0.0       0.00   \n",
        "SalePrice      1460.0  180921.195890  79442.502883  34900.0  129975.00   \n",
-       "Age_of_sale    1460.0    4874.894521    480.169167   4057.0    4452.00   \n",
+       "Age_of_sale    1460.0    4875.894521    480.169167   4058.0    4453.00   \n",
        "House_Age      1460.0      49.732192     30.202904     11.0      21.00   \n",
        "Remod_Age      1460.0      36.134247     20.645407     11.0      17.00   \n",
        "Garage_Age     1460.0      40.136301     25.892617      0.0      18.00   \n",
@@ -2146,7 +2198,7 @@
        "PoolArea            0.0       0.00     738.0  \n",
        "MiscVal             0.0       0.00   15500.0  \n",
        "SalePrice      163000.0  214000.00  755000.0  \n",
-       "Age_of_sale      4848.0    5244.00    5699.0  \n",
+       "Age_of_sale      4849.0    5245.00    5700.0  \n",
        "House_Age          48.0      67.00     149.0  \n",
        "Remod_Age          27.0      54.00      71.0  \n",
        "Garage_Age         36.5      59.00     121.0  "
@@ -2453,19 +2505,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Age_of_sale</th>\n",
-       "      <td>5244</td>\n",
-       "      <td>5153</td>\n",
-       "      <td>4452</td>\n",
-       "      <td>4118</td>\n",
-       "      <td>4057</td>\n",
-       "      <td>4787</td>\n",
-       "      <td>4087</td>\n",
-       "      <td>5153</td>\n",
-       "      <td>4664</td>\n",
-       "      <td>5122</td>\n",
-       "      <td>4817</td>\n",
-       "      <td>5518</td>\n",
-       "      <td>4118</td>\n",
+       "      <td>5245</td>\n",
+       "      <td>5154</td>\n",
+       "      <td>4453</td>\n",
+       "      <td>4119</td>\n",
+       "      <td>4058</td>\n",
+       "      <td>4788</td>\n",
+       "      <td>4088</td>\n",
+       "      <td>5154</td>\n",
+       "      <td>4665</td>\n",
+       "      <td>5123</td>\n",
+       "      <td>4818</td>\n",
+       "      <td>5519</td>\n",
+       "      <td>4119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>House_Age</th>\n",
@@ -2529,7 +2581,7 @@
        "Street         Pave    Pave    Pave    Pave   Pave    Pave    Pave    Pave   \n",
        "...             ...     ...     ...     ...    ...     ...     ...     ...   \n",
        "SalePrice    151500  106500  164900  272000  55000  160000  139000  122900   \n",
-       "Age_of_sale    5244    5153    4452    4118   4057    4787    4087    5153   \n",
+       "Age_of_sale    5245    5154    4453    4119   4058    4788    4088    5154   \n",
        "House_Age        61      62      70      20     91      81     106      72   \n",
        "Remod_Age        23      62      21      19     71      36      71      15   \n",
        "Garage_Age       61      62      70      20      0      32      60      18   \n",
@@ -2542,7 +2594,7 @@
        "Street         Pave    Pave    Pave    Pave    Pave  \n",
        "...             ...     ...     ...     ...     ...  \n",
        "SalePrice    163000  190000  256000  250000  266500  \n",
-       "Age_of_sale    4664    5122    4817    5518    4118  \n",
+       "Age_of_sale    4665    5123    4818    5519    4119  \n",
        "House_Age        63      44     101      43      80  \n",
        "Remod_Age        63      44      71      43      15  \n",
        "Garage_Age       63      44     101      43      80  \n",
@@ -2635,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2643,9 +2695,7 @@
      "output_type": "stream",
      "text": [
       "A file already exists with this name.\n",
-      "\n",
-      "Do you want to overwrite? (Y/N)Y\n",
-      "Writing file.  \"C:\\Springboard_\\CapstoneTwo\\Data Files\\train_data_cleaned.csv\"\n"
+      "\n"
      ]
     }
    ],
