revised EDA commit

--- a/CapstoneTwoDataWrangling-V2.ipynb
+++ b/CapstoneTwoDataWrangling-V2.ipynb
@@ -915,13 +915,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_data.fillna(value='NA', inplace=True)"
+    "cat_data.fillna(value='None', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1439,17 +1441,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       4940\n",
-      "1       5216\n",
-      "2       4727\n",
-      "3       5670\n",
-      "4       4636\n",
+      "0       4941\n",
+      "1       5217\n",
+      "2       4728\n",
+      "3       5671\n",
+      "4       4637\n",
       "        ... \n",
-      "1455    5124\n",
-      "1456    4209\n",
-      "1457    4120\n",
-      "1458    4150\n",
-      "1459    4819\n",
+      "1455    5125\n",
+      "1456    4210\n",
+      "1457    4121\n",
+      "1458    4151\n",
+      "1459    4820\n",
       "Name: Age_of_sale, Length: 1460, dtype: int64\n"
      ]
     }
@@ -2373,13 +2375,13 @@
        "    <tr>\n",
        "      <th>Age_of_sale</th>\n",
        "      <td>1460.0</td>\n",
-       "      <td>4876.894521</td>\n",
+       "      <td>4877.894521</td>\n",
        "      <td>480.169167</td>\n",
-       "      <td>4059.0</td>\n",
-       "      <td>4454.00</td>\n",
-       "      <td>4850.0</td>\n",
-       "      <td>5246.00</td>\n",
-       "      <td>5701.0</td>\n",
+       "      <td>4060.0</td>\n",
+       "      <td>4455.00</td>\n",
+       "      <td>4851.0</td>\n",
+       "      <td>5247.00</td>\n",
+       "      <td>5702.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>House_Age</th>\n",
@@ -2452,7 +2454,7 @@
        "MSSubClass     1460.0      56.897260     42.300571     20.0      20.00   \n",
        "OverallQual    1460.0       6.099315      1.382997      1.0       5.00   \n",
        "OverallCond    1460.0       5.575342      1.112799      1.0       5.00   \n",
-       "Age_of_sale    1460.0    4876.894521    480.169167   4059.0    4454.00   \n",
+       "Age_of_sale    1460.0    4877.894521    480.169167   4060.0    4455.00   \n",
        "House_Age      1460.0      49.732192     30.202904     11.0      21.00   \n",
        "Remod_Age      1460.0      16.367123     23.045582      0.0       0.00   \n",
        "Garage_Age     1460.0      40.136301     25.892617      0.0      18.00   \n",
@@ -2490,7 +2492,7 @@
        "MSSubClass         50.0      70.00     190.0  \n",
        "OverallQual         6.0       7.00      10.0  \n",
        "OverallCond         5.0       6.00       9.0  \n",
-       "Age_of_sale      4850.0    5246.00    5701.0  \n",
+       "Age_of_sale      4851.0    5247.00    5702.0  \n",
        "House_Age          48.0      67.00     149.0  \n",
        "Remod_Age           0.0      24.00      71.0  \n",
        "Garage_Age         36.5      59.00     121.0  "
@@ -2972,13 +2974,13 @@
        "      <td>854</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>60</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>4940</td>\n",
+       "      <td>4941</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
        "      <td>18.0</td>\n",
@@ -2996,13 +2998,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>20</td>\n",
        "      <td>6</td>\n",
        "      <td>8</td>\n",
-       "      <td>5216</td>\n",
+       "      <td>5217</td>\n",
        "      <td>45</td>\n",
        "      <td>0</td>\n",
        "      <td>45.0</td>\n",
@@ -3020,13 +3022,13 @@
        "      <td>866</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>60</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>4727</td>\n",
+       "      <td>4728</td>\n",
        "      <td>20</td>\n",
        "      <td>19</td>\n",
        "      <td>20.0</td>\n",
@@ -3044,13 +3046,13 @@
        "      <td>1053</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>60</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>4636</td>\n",
+       "      <td>4637</td>\n",
        "      <td>21</td>\n",
        "      <td>0</td>\n",
        "      <td>21.0</td>\n",
@@ -3068,13 +3070,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>20</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>5124</td>\n",
+       "      <td>5125</td>\n",
        "      <td>17</td>\n",
        "      <td>16</td>\n",
        "      <td>17.0</td>\n",
@@ -3092,13 +3094,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>190</td>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
-       "      <td>4971</td>\n",
+       "      <td>4972</td>\n",
        "      <td>82</td>\n",
        "      <td>71</td>\n",
        "      <td>82.0</td>\n",
@@ -3116,13 +3118,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>20</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>4940</td>\n",
+       "      <td>4941</td>\n",
        "      <td>56</td>\n",
        "      <td>0</td>\n",
        "      <td>56.0</td>\n",
@@ -3140,13 +3142,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>New</td>\n",
        "      <td>Partial</td>\n",
        "      <td>20</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>5124</td>\n",
+       "      <td>5125</td>\n",
        "      <td>15</td>\n",
        "      <td>14</td>\n",
        "      <td>15.0</td>\n",
@@ -3164,13 +3166,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>20</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
-       "      <td>4850</td>\n",
+       "      <td>4851</td>\n",
        "      <td>61</td>\n",
        "      <td>0</td>\n",
        "      <td>61.0</td>\n",
@@ -3188,13 +3190,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>None</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>45</td>\n",
        "      <td>7</td>\n",
        "      <td>8</td>\n",
-       "      <td>5155</td>\n",
+       "      <td>5156</td>\n",
        "      <td>92</td>\n",
        "      <td>20</td>\n",
        "      <td>30.0</td>\n",
@@ -3218,28 +3220,28 @@
        "15         51.0     6120         0.0           0           0        832   \n",
        "\n",
        "    TotalBsmtSF  1stFlrSF  2ndFlrSF  LowQualFinSF  ...  MiscFeature  SaleType  \\\n",
-       "0           856       856       854             0  ...           NA        WD   \n",
-       "1          1262      1262         0             0  ...           NA        WD   \n",
-       "2           920       920       866             0  ...           NA        WD   \n",
-       "4          1145      1145      1053             0  ...           NA        WD   \n",
-       "6          1686      1694         0             0  ...           NA        WD   \n",
-       "9           991      1077         0             0  ...           NA        WD   \n",
-       "10         1040      1040         0             0  ...           NA        WD   \n",
-       "13         1494      1494         0             0  ...           NA       New   \n",
-       "14         1253      1253         0             0  ...           NA        WD   \n",
-       "15          832       854         0             0  ...           NA        WD   \n",
+       "0           856       856       854             0  ...         None        WD   \n",
+       "1          1262      1262         0             0  ...         None        WD   \n",
+       "2           920       920       866             0  ...         None        WD   \n",
+       "4          1145      1145      1053             0  ...         None        WD   \n",
+       "6          1686      1694         0             0  ...         None        WD   \n",
+       "9           991      1077         0             0  ...         None        WD   \n",
+       "10         1040      1040         0             0  ...         None        WD   \n",
+       "13         1494      1494         0             0  ...         None       New   \n",
+       "14         1253      1253         0             0  ...         None        WD   \n",
+       "15          832       854         0             0  ...         None        WD   \n",
        "\n",
        "    SaleCondition  MSSubClass  OverallQual  OverallCond  Age_of_sale  \\\n",
-       "0          Normal          60            7            5         4940   \n",
-       "1          Normal          20            6            8         5216   \n",
-       "2          Normal          60            7            5         4727   \n",
-       "4          Normal          60            8            5         4636   \n",
-       "6          Normal          20            8            5         5124   \n",
-       "9          Normal         190            5            6         4971   \n",
-       "10         Normal          20            5            5         4940   \n",
-       "13        Partial          20            7            5         5124   \n",
-       "14         Normal          20            6            5         4850   \n",
-       "15         Normal          45            7            8         5155   \n",
+       "0          Normal          60            7            5         4941   \n",
+       "1          Normal          20            6            8         5217   \n",
+       "2          Normal          60            7            5         4728   \n",
+       "4          Normal          60            8            5         4637   \n",
+       "6          Normal          20            8            5         5125   \n",
+       "9          Normal         190            5            6         4972   \n",
+       "10         Normal          20            5            5         4941   \n",
+       "13        Partial          20            7            5         5125   \n",
+       "14         Normal          20            6            5         4851   \n",
+       "15         Normal          45            7            8         5156   \n",
        "\n",
        "    House_Age  Remod_Age  Garage_Age  \n",
        "0          18          0        18.0  \n",
