final capstone two submit

--- a/CapstoneTwoPreProcessing.ipynb
+++ b/CapstoneTwoPreProcessing.ipynb
@@ -168,6 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Dropping features we feel are not valuable to make feature selection more fluid\n",
     "data1 = data.drop(['SaleCondition','SaleType','Alley','Condition1','BldgType','Exterior1st','Exterior2nd','Foundation','Electrical','MSSubClass','MSZoning','BsmtFinType1','BsmtFinType2','Neighborhood'],axis=1)"
    ]
   },
@@ -2444,7 +2445,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2460,245 +2463,7 @@
    "source": [
     "#Saving preprocessed data to new csv\n",
     "datapath = 'C:\\Springboard_\\CapstoneTwo\\Data Files'\n",
-    "save_file(data_preprocessed1, 'data_preprocessed.csv', datapath)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Second Dataset with correlated independent variables removed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2 = data.drop(['TotRmsAbvGrd','GrLivArea','LotFrontage'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2 = data2.drop(['SaleCondition','SaleType','Alley','Condition1','BldgType','Exterior1st','Exterior2nd','Foundation','Electrical','MSSubClass','MSZoning','BsmtFinType1','BsmtFinType2','Neighborhood'],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['SalePrice', 'LotFrontage', 'LotArea', 'MasVnrArea', 'BsmtFinSF1',\n",
-       "       'TotalBsmtSF', '1stFlrSF', '2ndFlrSF', 'BsmtFullBath', 'FullBath',\n",
-       "       'HalfBath', 'Fireplaces', 'GarageArea', 'WoodDeckSF', 'OpenPorchSF',\n",
-       "       'LotShape', 'LandContour', 'LotConfig', 'LandSlope', 'HouseStyle',\n",
-       "       'RoofStyle', 'MasVnrType', 'ExterQual', 'ExterCond', 'BsmtQual',\n",
-       "       'BsmtCond', 'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir',\n",
-       "       'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType',\n",
-       "       'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'Fence',\n",
-       "       'MiscFeature', 'OverallQual', 'OverallCond', 'House_Age', 'Garage_Age'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data2.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "features = ['BsmtFullBath','FullBath', 'HalfBath', 'Fireplaces','LotShape', 'LandContour', 'LotConfig',\n",
-    "       'LandSlope', 'HouseStyle', 'RoofStyle', 'MasVnrType',\n",
-    "       'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir',\n",
-    "       'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType',\n",
-    "       'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'Fence',\n",
-    "       'MiscFeature', 'OverallQual', 'OverallCond', 'House_Age',\n",
-    "       'Garage_Age']\n",
-    "dummies = pd.get_dummies(data2[features])\n",
-    "data_dummies = pd.concat([data2,dummies],axis=1)\n",
-    "data_encoded = data_dummies.drop(['BsmtFullBath','FullBath', 'HalfBath', 'Fireplaces','LotShape', 'LandContour', 'LotConfig',\n",
-    "       'LandSlope', 'HouseStyle', 'RoofStyle', 'MasVnrType',\n",
-    "       'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir',\n",
-    "       'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType',\n",
-    "       'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'Fence',\n",
-    "       'MiscFeature', 'OverallQual', 'OverallCond', 'House_Age',\n",
-    "       'Garage_Age'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1137, 128)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_encoded.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing file.  \"C:\\Springboard_\\CapstoneTwo\\Data Files\\data_preprocessed2.csv\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Saving preprocessed data to new csv\n",
-    "datapath = 'C:\\Springboard_\\CapstoneTwo\\Data Files'\n",
-    "save_file(data_encoded, 'data_preprocessed2.csv', datapath)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Third Dataset removing the opposite side of the correlated variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data3 = data.drop(['1stFlrSF','2ndFlrSF','LotFrontage'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data3 = data3.drop(['SaleCondition','SaleType','Alley','Condition1','BldgType','Exterior1st','Exterior2nd','Foundation','Electrical','MSSubClass','MSZoning','BsmtFinType1','BsmtFinType2','Neighborhood'],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['SalePrice', 'LotArea', 'MasVnrArea', 'BsmtFinSF1', 'TotalBsmtSF',\n",
-       "       'GrLivArea', 'BsmtFullBath', 'FullBath', 'HalfBath', 'TotRmsAbvGrd',\n",
-       "       'Fireplaces', 'GarageArea', 'WoodDeckSF', 'OpenPorchSF', 'LotShape',\n",
-       "       'LandContour', 'LotConfig', 'LandSlope', 'HouseStyle', 'RoofStyle',\n",
-       "       'MasVnrType', 'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond',\n",
-       "       'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir', 'KitchenQual',\n",
-       "       'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual',\n",
-       "       'GarageCond', 'PavedDrive', 'Fence', 'MiscFeature', 'OverallQual',\n",
-       "       'OverallCond', 'House_Age', 'Garage_Age'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data3.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "features = ['BsmtFullBath','FullBath', 'HalfBath', 'Fireplaces','LotShape', 'LandContour', 'LotConfig',\n",
-    "       'LandSlope', 'HouseStyle', 'RoofStyle', 'MasVnrType',\n",
-    "       'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir',\n",
-    "       'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType',\n",
-    "       'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'Fence',\n",
-    "       'MiscFeature', 'OverallQual', 'OverallCond', 'House_Age',\n",
-    "       'Garage_Age']\n",
-    "dummies = pd.get_dummies(data3[features])\n",
-    "data_dummies = pd.concat([data3,dummies],axis=1)\n",
-    "data_encoded = data_dummies.drop(['BsmtFullBath','FullBath', 'HalfBath', 'Fireplaces','LotShape', 'LandContour', 'LotConfig',\n",
-    "       'LandSlope', 'HouseStyle', 'RoofStyle', 'MasVnrType',\n",
-    "       'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'Heating', 'HeatingQC', 'CentralAir',\n",
-    "       'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType',\n",
-    "       'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'Fence',\n",
-    "       'MiscFeature', 'OverallQual', 'OverallCond', 'House_Age',\n",
-    "       'Garage_Age'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1137, 127)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_encoded.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing file.  \"C:\\Springboard_\\CapstoneTwo\\Data Files\\data_preprocessed3.csv\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Saving preprocessed data to new csv\n",
-    "datapath = 'C:\\Springboard_\\CapstoneTwo\\Data Files'\n",
-    "save_file(data_encoded, 'data_preprocessed3.csv', datapath)"
+    "save_file(data_preprocessed1, 'data_preprocessed_scaled.csv', datapath)"
    ]
   },
   {
